Change to Azure PowerShell

--- a/articles/container-instances/index.yml
+++ b/articles/container-instances/index.yml
@@ -33,7 +33,7 @@ sections:
       href: /azure/container-instances/container-instances-quickstart-portal
     - image:
         src: /azure/virtual-machines/linux/media/index/logo_powershell.svg
-      text: Azure Powershell
+      text: Azure PowerShell
       href: /azure/container-instances/container-instances-quickstart-powershell
 - title: Step-by-Step Tutorials
   items:
