--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -30,6 +30,18 @@
       href: service-fabric-tutorial-deploy-app-with-cicd-vsts.md
     - name: 4- Monitor and Diagnose
       href: service-fabric-tutorial-monitoring-aspnet.md
+  - name: Deploy a Java app
+    items:
+    - name: 1- Build a Java application
+      href: service-fabric-tutorial-create-java-app.md
+    - name: 2- Debug and Log application
+      href: service-fabric-tutorial-debug-log-local-cluster.md
+    - name: 3- Deploy application to Azure
+      href: service-fabric-tutorial-java-deploy-azure.md
+    - name: 4- Monitor with ELK
+      href: service-fabric-tutorial-java-elk.md
+    - name: 5- Configure Jenkins 
+      href: service-fabric-tutorial-java-jenkins.md
   - name: Containerize an existing .NET app
     items:
     - name: 1- Deploy a .NET app using Docker Compose
