--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -529,7 +529,11 @@
     - name: Connect to a secure cluster
       href: service-fabric-connect-to-secure-cluster.md
     - name: Patch cluster nodes
-      href: service-fabric-patch-orchestration-application.md
+      items:
+      - name: Windows
+        href: service-fabric-patch-orchestration-application.md
+      - name: Linux
+        href: service-fabric-patch-orchestration-application-linux.md
   - name: Monitor and diagnose
     items:
     - name: OMS
