fixed MSDN forum link

--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -603,7 +603,7 @@
   - name: Learning path
     href: https://azure.microsoft.com/documentation/learning-paths/service-fabric/
   - name: MSDN Forum
-    href: https://social.msdn.microsoft.com/Forums/home?forum=AzureServiceFabric
+    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureServiceFabric
   - name: Pricing
     href: https://azure.microsoft.com/pricing/details/service-fabric/
   - name: Pricing calculator
