--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -34,13 +34,13 @@
     items:
     - name: 1- Build a Java application
       href: service-fabric-tutorial-create-java-app.md
-    - name: 2- Debug and Log application
+    - name: 2- Debug the application
       href: service-fabric-tutorial-debug-log-local-cluster.md
-    - name: 3- Deploy application to Azure
+    - name: 3- Deploy the application
       href: service-fabric-tutorial-java-deploy-azure.md
-    - name: 4- Monitor with ELK
+    - name: 4- Monitor and diagnose
       href: service-fabric-tutorial-java-elk.md
-    - name: 5- Configure Jenkins 
+    - name: 5- Configure CI/CD 
       href: service-fabric-tutorial-java-jenkins.md
   - name: Containerize an existing .NET app
     items:
