--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -100,6 +100,8 @@
       href: compute-benchmark-scores.md
     - name: vCPU quotas
       href: quotas.md
+  - name: Dedicated hosts
+    href: dedicated-hosts.md
   - name: Maintenance and updates
     href: maintenance-and-updates.md
   - name: Disk storage
@@ -138,8 +140,6 @@
     items:
     - name: Deploy dedicated hosts
       items:
-      - name: Overview
-        href: dedicated-hosts.md
       - name: Deploy using PowerShell
         href: dedicated-hosts-powershell.md
       - name: Deploy using portal
