--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -478,7 +478,7 @@
       items:
       - name: Using write accelerator
         href: how-to-enable-write-accelerator.md
-      - name: Enable ultra SSDs
+      - name: Enable ultra disks
         href: disks-enable-ultra-ssd.md
       - name: Benchmark a disk
         href: disks-benchmarks.md
