--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -388,7 +388,7 @@
       items:
         - name: Enable write accelerator
           href: how-to-enable-write-accelerator.md
-        - name: Enable ultra disks
+        - name: Using ultra disks
           href: disks-enable-ultra-ssd.md
         - name: Benchmark a disk
           href: disks-benchmarks.md
