HANA scale out with stand by nfs 4.1 GA

--- a/articles/virtual-machines/workloads/sap/toc.yml
+++ b/articles/virtual-machines/workloads/sap/toc.yml
@@ -102,6 +102,8 @@
       href: sap-hana-high-availability-rhel.md
     - name: Troubleshoot SAP HANA scale-out and Pacemaker on SLES
       href: hana-vm-troubleshoot-scale-out-ha-on-sles.md
+    - name: SAP HANA scale-out with standby node with Azure NetApp Files on SLES
+      href: sap-hana-scale-out-standby-netapp-files-suse.md
   - name: SAP HANA backup overview
     href: sap-hana-backup-guide.md
   - name: SAP HANA file level backup
