--- a/articles/virtual-machines/windows/sql/TOC.yml
+++ b/articles/virtual-machines/windows/sql/TOC.yml
@@ -63,6 +63,7 @@
     - name: Use Azure PowerShell
       href: virtual-machines-windows-ps-sql-create.md
   - name: Register with SQL VM RP
+    displayName: resource provider, registration
     items:
     - name: Single VM
       href: virtual-machines-windows-sql-register-with-resource-provider.md
