--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -67,7 +67,7 @@
   href: error-messages.md
 - name: Performance issues with VMs
   href: performance-diagnostics.md
-- name: Generic performance troubleshooting for Azure Virtual Machine running Linux or Windows
+- name: Troubleshoot Azure VM on Linux or Windows
   href: troubleshoot-performance-virtual-machine-linux-windows.md
 - name: Support for 32-bit operating systems
   href: support-32-bit-operating-systems-virtual-machines.md
