--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -877,7 +877,7 @@
     href: service-fabric-common-questions.md
   - name: MSDN Forum
     href: https://social.msdn.microsoft.com/Forums/home?forum=AzureServiceFabric
-  - name: ARM Deployment Guardrails
+  - name: Azure Resource Manager Deployment Guardrails
     href: service-fabric-azure-resource-manager-guardrails.md
   - name: Pricing
     href: https://azure.microsoft.com/pricing/details/service-fabric/
